# Project-Parallel-Image-Processing

./: .gitignore  CMakeLists.txt
src/: main.cpp
